[gd_scene load_steps=11 format=2]

[ext_resource path="res://SelectRoleSystem/SelectRoleSystem.gd" type="Script" id=1]
[ext_resource path="res://SelectRoleSystem/assets/1.png" type="Texture" id=2]
[ext_resource path="res://SelectRoleSystem/assets/3.png" type="Texture" id=3]
[ext_resource path="res://SelectRoleSystem/assets/2.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
next_pass = SubResource( 3 )
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
next_pass = SubResource( 1 )
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1
light_mode = 2

[node name="SelectRoleSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="RoleImg1" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 150.0
margin_right = 298.0
margin_bottom = 342.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoleImg2" type="TextureRect" parent="."]
visible = false
margin_left = 120.0
margin_top = 150.0
margin_right = 298.0
margin_bottom = 350.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoleImg3" type="TextureRect" parent="."]
visible = false
margin_left = 120.0
margin_top = 150.0
margin_right = 298.0
margin_bottom = 350.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 234.0
margin_top = 30.0
margin_right = 345.0
margin_bottom = 44.0
rect_scale = Vector2( 5, 8 )
text = "Choose Your Role"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnContainer" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="Assassin" type="Button" parent="BtnContainer"]
material = SubResource( 5 )
margin_left = 800.0
margin_top = 310.0
margin_right = 920.0
margin_bottom = 370.0
text = "Assassin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mage" type="Button" parent="BtnContainer"]
material = SubResource( 4 )
margin_left = 800.0
margin_top = 200.0
margin_right = 920.0
margin_bottom = 260.0
text = "Mage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warrior" type="Button" parent="BtnContainer"]
material = SubResource( 2 )
margin_left = 800.0
margin_top = 90.0
margin_right = 920.0
margin_bottom = 150.0
rect_clip_content = true
text = "Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GotoGame" type="Button" parent="BtnContainer"]
material = SubResource( 6 )
margin_left = 600.0
margin_top = 310.0
margin_right = 720.0
margin_bottom = 370.0
text = "GotoGame"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="BtnContainer/Assassin" to="." method="_on_Assassin_button_down"]
[connection signal="button_down" from="BtnContainer/Mage" to="." method="_on_Mage_button_down"]
[connection signal="button_down" from="BtnContainer/warrior" to="." method="_on_warrior_button_down"]
[connection signal="button_down" from="BtnContainer/GotoGame" to="." method="_on_GotoGame_button_down"]
